[project]
name = "spu-processing-tool"
version = "1.0.0"
description = "GUI tool for processing CDD input files with SPU templates"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
spu-tool = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
